include/chemharp.h

    typedef harp::Atom CHRP_ATOM;
    typedef harp::UnitCell CHRP_CELL;
    typedef harp::Topology CHRP_TOPOLOGY;
    //! Opaque type handling an atom
    typedef struct CHRP_ATOM CHRP_ATOM;
    //! Opaque type handling an unit cell
    typedef struct CHRP_CELL CHRP_CELL;
    //! Opaque type handling a topology
    typedef struct CHRP_TOPOLOGY CHRP_TOPOLOGY;
/*!
* @brief Get the cell periodic boundary conditions along the three axis
* @param cell the cell to read
* @param x,y,z the periodicity of the cell along the three axis.
* @return The status code
*/
CHRP_EXPORT int chrp_cell_periodicity(const CHRP_CELL* cell, bool* x, bool* y, bool* z);
/*!
* @brief Destroy an unit cell, and free the associated memory
* @param cell The cell to destroy
* @return The status code
*/
CHRP_EXPORT int chrp_cell_free(CHRP_CELL* cell);
/******************************************************************************/

/*!
* @brief Create a new empty topology
* @return A pointer to the new Topology
*/
CHRP_EXPORT CHRP_TOPOLOGY* chrp_topology();
/*!
* @brief Add an atom at the end of a topology
* @param topology The topology
* @param atom The atom to be added
* @return The status code
*/
CHRP_EXPORT int chrp_topology_append(CHRP_TOPOLOGY* topology, const CHRP_ATOM* atom);
/*!
* @brief Remove an atom from a topology by index. This modify all the other atoms indexes.
* @param topology The topology
* @param i The atomic index
* @return The status code
*/
CHRP_EXPORT int chrp_topology_remove(CHRP_TOPOLOGY* topology, size_t i);
/*!
* @brief Tell if the atoms \c i and \c j are bonded together
* @param topology The topology
* @param i,j The atomic indexes
* @param result true if the atoms are bonded, false otherwise
* @return The status code
*/
CHRP_EXPORT int chrp_topology_isbond(const CHRP_TOPOLOGY* topology, size_t i, size_t j, bool* result);
/*!
* @brief Tell if the atoms \c i, \c j and \c k constitues an angle
* @param topology The topology
* @param i,j,k The atomic indexes
* @param result true if the atoms constitues an angle, false otherwise
* @return The status code
*/
CHRP_EXPORT int chrp_topology_isangle(const CHRP_TOPOLOGY* topology, size_t i, size_t j, size_t k, bool* result);
/*!
* @brief Tell if the atoms \c i, \c j, \c k and \c m constitues a dihedral angle
* @param topology The topology
* @param i,j,k,m The atomic indexes
* @param result true if the atoms constitues a dihedral angle, false otherwise
* @return The status code
*/
CHRP_EXPORT int chrp_topology_isdihedral(const CHRP_TOPOLOGY* topology, size_t i, size_t j, size_t k, size_t m, bool* result);
/*!
* @brief Get the number of bonds in the system
* @param topology The topology
* @param nbonds After the call, contains the number of bond
* @return The status code
*/
CHRP_EXPORT int chrp_topology_bonds_count(const CHRP_TOPOLOGY* topology, size_t* nbonds);
/*!
* @brief Get the number of angles in the system
* @param topology The topology
* @param nangles After the call, contains the number of angles
* @return The status code
*/
CHRP_EXPORT int chrp_topology_angles_count(const CHRP_TOPOLOGY* topology, size_t* nangles);
/*!
* @brief Get the number of dihedral angles in the system
* @param topology The topology
* @param ndihedrals After the call, contains the number of dihedral angles
* @return The status code
*/
CHRP_EXPORT int chrp_topology_dihedrals_count(const CHRP_TOPOLOGY* topology, size_t* ndihedrals);
/*!
* @brief Get the list of bonds in the system
* @param topology The topology
* @param data A nbonds x 2 array to be filled with the bonds in the system
* @param nbonds The size of the array. This should equal the value given by the
*               chrp_topology_bonds_count function
* @return The status code
*/
CHRP_EXPORT int chrp_topology_bonds(const CHRP_TOPOLOGY* topology, size_t (*data)[2], size_t nbonds);
/*!
* @brief Get the list of angles in the system
* @param topology The topology
* @param data A nangles x 3 array to be filled with the angles in the system
* @param nangles The size of the array. This should equal the value given by the
*               chrp_topology_angles_count function
* @return The status code
*/
CHRP_EXPORT int chrp_topology_angles(const CHRP_TOPOLOGY* topology, size_t (*data)[3], size_t nangles);
/*!
* @brief Get the list of dihedral angles in the system
* @param topology The topology
* @param data A ndihedrals x 4 array to be filled with the dihedral angles in the system
* @param ndihedrals The size of the array. This should equal the value given by the
*               chrp_topology_dihedrals_count function
* @return The status code
*/
CHRP_EXPORT int chrp_topology_dihedrals(const CHRP_TOPOLOGY* topology, size_t (*data)[4], size_t ndihedrals);
/*!
* @brief Add a bond between the atoms \c i and \c j in the system
* @param topology The topology
* @param i,j The atomic indexes
* @return The status code
*/
CHRP_EXPORT int chrp_topology_add_bond(CHRP_TOPOLOGY* topology, size_t i, size_t j);
/*!
* @brief Remove any existing bond between the atoms \c i and \c j in the system
* @param topology The topology
* @param i,j The atomic indexes
* @return The status code
*/
CHRP_EXPORT int chrp_topology_remove_bond(CHRP_TOPOLOGY* topology, size_t i, size_t j);
/*!
* @brief Destroy a topology, and free the associated memory
* @param topology The topology to destroy
* @return The status code
*/
CHRP_EXPORT int chrp_topology_free(CHRP_TOPOLOGY* topology);
/******************************************************************************/

/*!
* @brief Create an atom from an atomic name
* @param name The new atom name
* @return A pointer to the corresponding atom
*/
CHRP_EXPORT CHRP_ATOM* chrp_atom(const char* name);
/*!
* @brief Get a specific atom from a topology
* @param topology The topology
* @param idx The atom index in the topology
* @return A pointer to the corresponding atom
*/
CHRP_EXPORT CHRP_ATOM* chrp_atom_from_topology(const CHRP_TOPOLOGY* topology, size_t idx);
/*!
* @brief Get the mass of an atom, in atomic mass units
* @param atom The atom
* @param mass The atom mass
* @return The status code
*/
CHRP_EXPORT int chrp_atom_mass(const CHRP_ATOM* atom, float* mass);
/*!
* @brief Get the charge of an atom, in number of the electron charge e
* @param atom The atom
* @param charge The atom charge
* @return The status code
*/
CHRP_EXPORT int chrp_atom_charge(const CHRP_ATOM* atom, float* charge);
/*!
* @brief Get the name of an atom
* @param atom The atom
* @param name A string buffer to be filled with the name
* @param buffsize The size of the string buffer
* @return The status code
*/
CHRP_EXPORT int chrp_atom_name(const CHRP_ATOM* atom, char* name, size_t buffsize);
/*!
* @brief Destroy an atom, and free the associated memory
* @param atom The atom to destroy
* @return The status code
*/
CHRP_EXPORT int chrp_atom_free(CHRP_ATOM* atom);