bindings/fortran/generated/cdef.f90


! Function "chrp_cell_periodicity", at bindings/c/chemharp.h:356
function chrp_cell_periodicity_c(cell, x, y, z) bind(C, name="chrp_cell_periodicity")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_cell_periodicity_c
    type(c_ptr), value, intent(in) :: cell
    logical(kind=c_bool) :: x
    logical(kind=c_bool) :: y
    logical(kind=c_bool) :: z
end function

! Function "chrp_cell_periodicity_set", at bindings/c/chemharp.h:364
function chrp_cell_periodicity_set_c(cell, x, y, z) bind(C, name="chrp_cell_periodicity_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_cell_periodicity_set_c
    type(c_ptr), value :: cell
    logical(kind=c_bool), value :: x
    logical(kind=c_bool), value :: y
    logical(kind=c_bool), value :: z
end function

! Function "chrp_cell_free", at bindings/c/chemharp.h:371
function chrp_cell_free_c(cell) bind(C, name="chrp_cell_free")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_cell_free_c
    type(c_ptr), value :: cell
end function

! Function "chrp_topology", at bindings/c/chemharp.h:380
function chrp_topology_c(frame) bind(C, name="chrp_topology")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_topology_c
    type(c_ptr), value :: frame
end function

! Function "chrp_empty_topology", at bindings/c/chemharp.h:386
function chrp_empty_topology_c() bind(C, name="chrp_empty_topology")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_empty_topology_c

end function

! Function "chrp_topology_size", at bindings/c/chemharp.h:394
function chrp_topology_size_c(topology, natoms) bind(C, name="chrp_topology_size")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_size_c
    type(c_ptr), value, intent(in) :: topology
    integer(kind=c_size_t) :: natoms
end function

! Function "chrp_topology_guess", at bindings/c/chemharp.h:404
function chrp_topology_guess_c(topology, bonds) bind(C, name="chrp_topology_guess")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_guess_c
    type(c_ptr), value :: topology
    logical(kind=c_bool), value :: bonds
end function

! Function "chrp_topology_append", at bindings/c/chemharp.h:412
function chrp_topology_append_c(topology, atom) bind(C, name="chrp_topology_append")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_append_c
    type(c_ptr), value :: topology
    type(c_ptr), value :: atom
end function

! Function "chrp_topology_remove", at bindings/c/chemharp.h:420
function chrp_topology_remove_c(topology, i) bind(C, name="chrp_topology_remove")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_remove_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: i
end function

! Function "chrp_topology_isbond", at bindings/c/chemharp.h:429
function chrp_topology_isbond_c(topology, i, j, result) bind(C, name="chrp_topology_isbond")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_isbond_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
    logical(kind=c_bool) :: result
end function

! Function "chrp_topology_isangle", at bindings/c/chemharp.h:438
function chrp_topology_isangle_c(topology, i, j, k, result) bind(C, name="chrp_topology_isangle")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_isangle_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
    integer(kind=c_size_t), value :: k
    logical(kind=c_bool) :: result
end function

! Function "chrp_topology_isdihedral", at bindings/c/chemharp.h:448
function chrp_topology_isdihedral_c(topology, i, j, k, m, result) bind(C, name="chrp_topology_isdihedral")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_isdihedral_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
    integer(kind=c_size_t), value :: k
    integer(kind=c_size_t), value :: m
    logical(kind=c_bool) :: result
end function

! Function "chrp_topology_bonds_count", at bindings/c/chemharp.h:457
function chrp_topology_bonds_count_c(topology, nbonds) bind(C, name="chrp_topology_bonds_count")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_bonds_count_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t) :: nbonds
end function

! Function "chrp_topology_angles_count", at bindings/c/chemharp.h:465
function chrp_topology_angles_count_c(topology, nangles) bind(C, name="chrp_topology_angles_count")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_angles_count_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t) :: nangles
end function

! Function "chrp_topology_dihedrals_count", at bindings/c/chemharp.h:473
function chrp_topology_dihedrals_count_c(topology, ndihedrals) bind(C, name="chrp_topology_dihedrals_count")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_dihedrals_count_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t) :: ndihedrals
end function

! Function "chrp_topology_bonds", at bindings/c/chemharp.h:483
function chrp_topology_bonds_c(topology, data, nbonds) bind(C, name="chrp_topology_bonds")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_bonds_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), dimension(:, :) :: data
    integer(kind=c_size_t), value :: nbonds
end function

! Function "chrp_topology_angles", at bindings/c/chemharp.h:493
function chrp_topology_angles_c(topology, data, nangles) bind(C, name="chrp_topology_angles")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_angles_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), dimension(:, :) :: data
    integer(kind=c_size_t), value :: nangles
end function

! Function "chrp_topology_dihedrals", at bindings/c/chemharp.h:503
function chrp_topology_dihedrals_c(topology, data, ndihedrals) bind(C, name="chrp_topology_dihedrals")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_dihedrals_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), dimension(:, :) :: data
    integer(kind=c_size_t), value :: ndihedrals
end function

! Function "chrp_topology_add_bond", at bindings/c/chemharp.h:511
function chrp_topology_add_bond_c(topology, i, j) bind(C, name="chrp_topology_add_bond")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_add_bond_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
end function

! Function "chrp_topology_remove_bond", at bindings/c/chemharp.h:519
function chrp_topology_remove_bond_c(topology, i, j) bind(C, name="chrp_topology_remove_bond")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_remove_bond_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
end function

! Function "chrp_topology_free", at bindings/c/chemharp.h:526
function chrp_topology_free_c(topology) bind(C, name="chrp_topology_free")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_free_c
    type(c_ptr), value :: topology
end function

! Function "chrp_atom", at bindings/c/chemharp.h:535
function chrp_atom_c(frame, idx) bind(C, name="chrp_atom")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_atom_c
    type(c_ptr), value :: frame
    integer(kind=c_size_t), value :: idx
end function

! Function "chrp_atom_from_name", at bindings/c/chemharp.h:542
function chrp_atom_from_name_c(name) bind(C, name="chrp_atom_from_name")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_atom_from_name_c
    character(len=1, kind=c_char), dimension(*), intent(in) :: name
end function

! Function "chrp_atom_from_topology", at bindings/c/chemharp.h:550
function chrp_atom_from_topology_c(topology, idx) bind(C, name="chrp_atom_from_topology")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_atom_from_topology_c
    type(c_ptr), value :: topology
    integer(kind=c_size_t), value :: idx
end function

! Function "chrp_atom_mass", at bindings/c/chemharp.h:557
function chrp_atom_mass_c(atom, mass) bind(C, name="chrp_atom_mass")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_mass_c
    type(c_ptr), value, intent(in) :: atom
    real(kind=c_float) :: mass
end function

! Function "chrp_atom_mass_set", at bindings/c/chemharp.h:564
function chrp_atom_mass_set_c(atom, mass) bind(C, name="chrp_atom_mass_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_mass_set_c
    type(c_ptr), value :: atom
    real(kind=c_float), value :: mass
end function

! Function "chrp_atom_charge", at bindings/c/chemharp.h:571
function chrp_atom_charge_c(atom, charge) bind(C, name="chrp_atom_charge")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_charge_c
    type(c_ptr), value, intent(in) :: atom
    real(kind=c_float) :: charge
end function

! Function "chrp_atom_charge_set", at bindings/c/chemharp.h:578
function chrp_atom_charge_set_c(atom, charge) bind(C, name="chrp_atom_charge_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_charge_set_c
    type(c_ptr), value :: atom
    real(kind=c_float), value :: charge
end function

! Function "chrp_atom_name", at bindings/c/chemharp.h:586
function chrp_atom_name_c(atom, name, buffsize) bind(C, name="chrp_atom_name")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_name_c
    type(c_ptr), value, intent(in) :: atom
    character(len=1, kind=c_char), dimension(*) :: name
    integer(kind=c_size_t), value :: buffsize
end function

! Function "chrp_atom_name_set", at bindings/c/chemharp.h:593
function chrp_atom_name_set_c(atom, name) bind(C, name="chrp_atom_name_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_name_set_c
    type(c_ptr), value :: atom
    character(len=1, kind=c_char), dimension(*), intent(in) :: name
end function

! Function "chrp_atom_free", at bindings/c/chemharp.h:600
function chrp_atom_free_c(atom) bind(C, name="chrp_atom_free")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_free_c
    type(c_ptr), value :: atom
end function

end interface
